--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "nprogress": "^0.2.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vue-router-middleware-plugin": "^3.1.1",
+    "vue-scrollto": "^2.18.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
